[package]
name = "rusd"
version = "0.1.0"
edition = "2021"

[dependencies]
pest = "2.7.6"
pest_derive = "2.7.6"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmark"
harness = false

[profile.release]
debug = 1
lto = true

[patch.crates-io]
pest = { path = "../pest/pest" }
pest_derive = { path = "../pest/derive" }